--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,7 @@ h6 {
     --text-color-gray: #D4D4D4;
     --bg-gradient-color: linear-gradient(180deg, #E5E9EA 6.19%, #1D1E1E 403.95%);
 
-    --button-shadow: 0px 2px 20px rgba(29, 30, 30, 0.14);
+    --button-shadow: #313131 0px 2px 20px;
 
     --font-family: 'Visuelt Pro';
     --font-size-10px: 0.625rem;
@@ -71,9 +71,9 @@ h6 {
     --font-size-44px: 2.75rem;
     /*H1*/
 
-    --letter-spacing-nav: 0.06em;
-    --letter-spacing-subtitle: 0.08em;
-    --margin-card: 0.5rem;
+    --letter-spacing-nav: 0.06rem;
+    --letter-spacing-subtitle: 0.08rem;
+    --margin-card: 0.6rem;
     --margin-tiny: 0.25rem;
 
     --shadow-color: 192deg 4% 72% / 0.8;
@@ -159,7 +159,7 @@ body {
     text-transform: uppercase;
     font-size: var(--font-size-16px);
     letter-spacing: var(--letter-spacing-nav);
-    padding: 0 0.3rem 0.2rem 0.3rem;
+    padding: 0 0.25rem 0.2rem 0.25rem;
 }
 
 .navigation a:link,
@@ -168,9 +168,40 @@ body {
     color: var(--dark-color);
 }
 
-.navigation .active {
-    border-bottom: 2px solid var(--accent-color);
+
+.navigation a {
+    position: relative;
+    display: inline-block;
 }
+
+.navigation a::after {
+    /* border-bottom: 0.125rem solid var(--accent-color); */
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    background-color: var(--accent-color);
+    width: 0;
+    height: 0.125rem;
+    transition: all 300ms ease-out;
+}
+
+.navigation a:hover::after {
+    width: 100%;
+}
+
+.navigation .active::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 0.125rem;
+}
+
 
 
 /*Componente BANNER*/
@@ -315,7 +346,7 @@ body {
     border: none;
     cursor: pointer;
 
-    padding: .5em 1.5em;
+    padding: 0.5rem 1.5rem;
 }
 
 .cta {
@@ -326,13 +357,15 @@ body {
 .second_cta {
     background: none;
     color: var(--accent-color);
-    padding: .5em 0;
+    padding: 0.5rem 0;
 }
 
 .main_cta {
     background: var(--accent-color);
     color: var(--text-color-light);
-    border-radius: 38px;
+    border-radius: 2.375rem;
+
+    box-shadow: var(--button-shadow);
 }
 
 
