--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,8 +53,6 @@ h6 {
     --text-color-gray: #D4D4D4;
     --bg-gradient-color: linear-gradient(180deg, #E5E9EA 6.19%, #1D1E1E 403.95%);
 
-    --button-shadow: #313131 0px 2px 20px;
-
     --font-family: 'Visuelt Pro';
     --font-size-10px: 0.625rem;
     /*Categoría de card*/
@@ -76,7 +74,9 @@ h6 {
     --margin-card: 0.6rem;
     --margin-tiny: 0.25rem;
 
-    --shadow-color: 192deg 4% 72% / 0.8;
+    --button-shadow: #313131 0px 2px 20px;
+    --shadow-color: 192deg 4% 72%;
+    --shadow-color-button: 0deg 0% 36%;
     --shadow-elevation-medium:
         0px 1px 1.4px hsl(var(--shadow-color) / 0.03),
         0px 3.6px 5.2px -0.1px hsl(var(--shadow-color) / 0.1),
@@ -91,7 +91,11 @@ h6 {
         0px 22.8px 26.2px -1.7px hsl(var(--shadow-color) / 0.16),
         -0.1px 34.2px 39.2px -2px hsl(var(--shadow-color) / 0.17),
         -0.1px 50px 57.4px -2.3px hsl(var(--shadow-color) / 0.17);
-
+    --shadow-elevation-button:
+        0px 1px 1.4px hsl(var(--shadow-color-button) / 0.03),
+        0px 3.6px 5.2px -0.1px hsl(var(--shadow-color-button) / 0.1),
+        0.1px 7.3px 10.5px -0.3px hsl(var(--shadow-color-button) / 0.18),
+        0.1px 15px 21.5px -0.4px hsl(var(--shadow-color-button) / 0.25);
 }
 
 
@@ -144,12 +148,13 @@ body {
     color: var(--accent-color);
     font-size: var(--font-size-26px);
     font-weight: 700;
+    transition: color ease 230ms;
 }
 
 .icon-logo {
     fill: var(--accent-color);
     cursor: pointer;
-    transition: color ease 250ms, fill ease 250ms;
+    transition: fill ease 230ms;
 }
 
 .site-logo:hover a {
@@ -159,9 +164,6 @@ body {
 .site-logo:hover .icon-logo {
     fill: var(--dark-color);
 }
-
-
-
 
 .navigation {
     display: flex;
@@ -193,7 +195,6 @@ body {
 }
 
 .navigation a::after {
-    /* border-bottom: 0.125rem solid var(--accent-color); */
     content: "";
     position: absolute;
     left: 50%;
@@ -221,7 +222,7 @@ body {
 }
 
 
-.header-cart {
+.header-cart-icon {
     position: relative;
 }
 
@@ -241,16 +242,27 @@ body {
     content: attr(data-header-cart-count);
     font-family: var(--font-family);
     font-size: var(--font-size-14px);
-    
+
     min-height: 22px;
     min-width: 22px;
     color: var(--text-color-light);
-   
+
     background-color: var(--dark-color);
     border-radius: 50%;
 
 }
 
+.header-cart-info {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.header-cart-info>span {
+    font-size: var(--font-size-16px);
+    font-weight: 500;
+    color: var(--dark-color);
+}
 
 
 
@@ -284,13 +296,35 @@ body {
     padding: 2.563em 0 4.625em 0;
 }
 
-.pastilla>span {
+.pastilla {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+.pastilla:nth-child(1):before {
+    content: url(../assets/icons/envios.svg);
+}
+
+.pastilla:nth-child(2):before {
+    content: url(../assets/icons/soporte.svg);
+}
+
+.pastilla:nth-child(3):before {
+    content: url(../assets/icons/devolucion.svg);
+}
+
+.pastilla:nth-child(4):before {
+    content: url(../assets/icons/ofertas.svg);
+}
+
+.pastilla span {
     font-size: (var(--font-size-16px));
     font-weight: 700;
     color: var(--text-color-light);
 }
 
-.pastilla>p {
+.pastilla p {
     font-size: var(--font-size-14px);
     font-weight: 400;
     color: var(--text-color-gray);
@@ -327,8 +361,6 @@ body {
     color: var(--dark-color);
     margin-bottom: 40px;
 }
-
-
 
 .cards-container {
     display: grid;
@@ -378,8 +410,9 @@ body {
 .card-body span:last-of-type {
     font-size: var(--font-size-20px);
     font-weight: 400;
+    display: inline-block;
+    margin-bottom: 0.4rem;
 }
-
 
 .margin-card {
     margin-bottom: var(--margin-card);
@@ -388,7 +421,6 @@ body {
 .margin-tiny {
     margin-bottom: var(--margin-tiny);
 }
-
 
 .button {
     display: inline-block;
@@ -414,24 +446,32 @@ body {
 .main_cta {
     background: var(--accent-color);
     color: var(--text-color-light);
+    padding: 0.5rem 1.1rem 0.4rem 2.5rem;
     border-radius: 2.375rem;
-
     box-shadow: var(--button-shadow);
+
+    background-image: url(../assets/icons/carrito-button.svg);
+    background-repeat: no-repeat;
+    background-size: 1.5rem;
+    background-position: 0.8rem center;
+
+    transition: color ease 230ms, box-shadow ease 230ms, background-image ease 230ms;
 }
 
-
-
-
+.main_cta:hover {
+    box-shadow: var(--shadow-elevation-button);
+    color: var(--dark-color);
+    background-image: url(../assets/icons/carrito-button-hover.svg);
+}
 
 #productos {
     position: relative;
-
     padding-bottom: 9em;
 }
 
-.custom-shape-divider-top-1674181137 {
+.custom-shape-divider-top {
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 0;
     width: 100%;
     overflow: hidden;
@@ -439,13 +479,13 @@ body {
     transform: rotate(180deg);
 }
 
-.custom-shape-divider-top-1674181137 svg {
+.custom-shape-divider-top svg {
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
     height: 38px;
 }
 
-.custom-shape-divider-top-1674181137 .shape-fill {
-    fill: #1D1E1E;
+.custom-shape-divider-top .shape-fill {
+    fill: var(--dark-color);
 }
