--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,9 @@ h6 {
     --text-color-gray: #D4D4D4;
     --bg-gradient-color: linear-gradient(180deg, #E5E9EA 6.19%, #1D1E1E 403.95%);
 
-    --font-family: 'Visuelt Pro';
+    --font-family: 'visuelt_proregular';
+    --font-family-medium: 'visuelt_promedium';
+    --font-family-bold: 'visuelt_probold';
     --font-size-10px: 0.625rem;
     /*Categoría de card*/
     --font-size-12px: 0.75rem;
@@ -69,7 +71,7 @@ h6 {
     --font-size-44px: 2.75rem;
     /*H1*/
 
-    --letter-spacing-nav: 0.06rem;
+    --letter-spacing-nav: 0.04rem;
     --letter-spacing-subtitle: 0.08rem;
     --margin-card: 0.6rem;
     --margin-tiny: 0.25rem;
@@ -146,8 +148,8 @@ body {
     text-decoration: none;
 
     color: var(--accent-color);
+    font-family: var(--font-family-bold);
     font-size: var(--font-size-26px);
-    font-weight: 700;
     transition: color ease 230ms;
 }
 
@@ -172,15 +174,15 @@ body {
 
     list-style: none;
     color: var(--dark-color);
-    font-weight: 500;
+    font-family: var(--font-family-medium);
 }
 
 .navigation a {
     color: var(--dark-color);
     text-transform: uppercase;
-    font-size: var(--font-size-16px);
+    font-size: var(--font-size-14px);
     letter-spacing: var(--letter-spacing-nav);
-    padding: 0 0.25rem 0.2rem 0.25rem;
+    padding: 0 0.25rem 0.15rem 0.25rem;
 }
 
 .navigation a:link,
@@ -221,7 +223,6 @@ body {
     height: 0.125rem;
 }
 
-
 .header-cart-icon {
     position: relative;
 }
@@ -240,7 +241,7 @@ body {
     padding: 0.3125rem 0 0 0;
 
     content: attr(data-header-cart-count);
-    font-family: var(--font-family);
+    font-family: var(--font-family-medium);
     font-size: var(--font-size-14px);
 
     min-height: 22px;
@@ -259,8 +260,8 @@ body {
 }
 
 .header-cart-info>span {
+    font-family: var(--font-family-medium);
     font-size: var(--font-size-16px);
-    font-weight: 500;
     color: var(--dark-color);
 }
 
@@ -319,14 +320,13 @@ body {
 }
 
 .pastilla span {
+    font-family: var(--font-family-bold);
     font-size: (var(--font-size-16px));
-    font-weight: 700;
     color: var(--text-color-light);
 }
 
 .pastilla p {
     font-size: var(--font-size-14px);
-    font-weight: 400;
     color: var(--text-color-gray);
 }
 
@@ -345,8 +345,8 @@ body {
 }
 
 .subtitle {
+    font-family: var(--font-family-medium);
     font-size: var(--font-size-16px);
-    font-weight: 700;
     color: var(--accent-color);
     text-transform: uppercase;
     letter-spacing: var(--letter-spacing-subtitle);
@@ -356,8 +356,8 @@ body {
 }
 
 .h1 {
+    font-family: var(--font-family-bold);
     font-size: var(--font-size-44px);
-    font-weight: 700;
     color: var(--dark-color);
     margin-bottom: 40px;
 }
@@ -386,8 +386,8 @@ body {
 }
 
 .card-body span:first-of-type {
+    font-family: var(--font-family-medium);
     font-size: var(--font-size-12px);
-    font-weight: 500;
     color: var(--text-color-gray);
     text-transform: uppercase;
     letter-spacing: var(--letter-spacing-subtitle);
@@ -396,20 +396,19 @@ body {
 }
 
 .card-body .h2 {
+    font-family: var(--font-family-bold);
     font-size: var(--font-size-20px);
-    font-weight: 700;
     line-height: 1;
     color: var(--text-color-light);
 }
 
 .card-body p {
     font-size: var(--font-size-14px);
-    font-weight: 400;
 }
 
 .card-body span:last-of-type {
+    font-family: var(--font-family-medium);
     font-size: var(--font-size-20px);
-    font-weight: 400;
     display: inline-block;
     margin-bottom: 0.4rem;
 }
@@ -424,8 +423,8 @@ body {
 
 .button {
     display: inline-block;
+    font-family: var(--font-family-bold);
     font-size: var(--font-size-16px);
-    font-weight: 500;
     border: none;
     cursor: pointer;
 
