--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
 
 html,
 body {
-    height: 100%;
+    /* height: 100%; */
     scroll-behavior: smooth;
 }
 
@@ -110,7 +110,6 @@ h6 {
         11.2px 22.3px 28.1px -1.8px hsl(var(--shadow-color) / 0.34),
         17px 33.9px 42.7px -2.1px hsl(var(--shadow-color) / 0.34),
         25px 50px 62.9px -2.5px hsl(var(--shadow-color) / 0.34);
-
 }
 
 
@@ -120,6 +119,16 @@ body {
     background: var(--dark-color);
     font-family: var(--font-family);
     color: var(--light-color);
+}
+
+header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0px 0.3px 0.3px hsl(var(--shadow-color) / 0.36),
+        0px 0.8px 0.9px -0.8px hsl(var(--shadow-color) / 0.36),
+        0px 2.1px 2.4px -1.7px hsl(var(--shadow-color) / 0.36),
+        0.1px 5.1px 5.7px -2.5px hsl(var(--shadow-color) / 0.36);
 }
 
 .layout-container {
@@ -540,7 +549,7 @@ body {
     place-items: center;
 
     position: fixed;
-    z-index: 1;
+    z-index: 101;
     left: 0;
     top: 0;
 
@@ -698,7 +707,7 @@ body {
     justify-content: end;
 
     position: fixed;
-    z-index: 1;
+    z-index: 101;
     left: 0;
     top: 0;
 
