--- a/styles/styles.css
+++ b/styles/styles.css
@@ -728,7 +728,7 @@ header {
 
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 
     background-color: var(--bg-modal-color);
 }
@@ -738,11 +738,16 @@ header {
     flex-direction: column;
     gap: 30px;
     position: relative;
+    right: -100%;
+
     width: 30%;
     max-width: 500px;
     padding: 90px 60px 40px 60px;
     border-radius: 9px 0 0 9px;
     background: var(--light-color);
+
+
+    transition: all ease 230ms;
 }
 
 .close-modal-carrito {
