--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,10 +125,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 100;
-    box-shadow: 0px 0.3px 0.3px hsl(var(--shadow-color) / 0.36),
-        0px 0.8px 0.9px -0.8px hsl(var(--shadow-color) / 0.36),
-        0px 2.1px 2.4px -1.7px hsl(var(--shadow-color) / 0.36),
-        0.1px 5.1px 5.7px -2.5px hsl(var(--shadow-color) / 0.36);
+    box-shadow: 0 1px 20px rgb(0 0 0 / 10%);
 }
 
 .layout-container {
